# vtool_ibeis

./: .cmake-format.py  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  README.rst  autogen_docs.sh  clean.sh  genindex.html  index.html  objects.inv  publish.sh  py-modindex.html  pyproject.toml  requirements.txt  run_developer_setup.sh  run_doctests.sh  run_linter.sh  run_manylinux_build.sh  run_multibuild.sh  run_tests.py  run_tests.sh  setup.cfg  setup.py  unix_build.sh  vtool.html  vtool.tests.html
.github/workflows/: python-publish.yml  testing.yml  tests.yml
CMake/: CMakeLists.txt  Config.cmake.in  FindGflags.cmake  FindVtool.cmake  python-utils.cmake  python_utils.cmake  uninstall_target.cmake.in  vtool-utils.cmake  vtool.pc.in  vtool_utils.cmake
_docs/: conf.py  vtool.rst
_docs/_build/doctrees/: environment.pickle  index.doctree
_docs/_build/html/: .buildinfo  searchindex.js  vtool.html
_docs/_build/html/_modules/: index.html
_docs/_build/html/_sources/: index.rst.txt
_modules/: index.html  vtool.html
_modules/vtool/: chip.html  clustering2.html  constrained_matching.html  coverage_grid.html  coverage_kpts.html  ellipse.html  exif.html  features.html  geometry.html  image.html  image_filters.html  keypoint.html  matching.html  math.html  nearest_neighbors.html  patch.html  score_normalization.html  spatial_verification.html  test_constrained_matching.html  trig.html
_modules/vtool/tests/: _olddep_test_exhaustive_ori_extract.html  dummy.html  test_akmeans.html  test_coverage_max_reduce.html  test_pyflann.html  test_spatial_verification.html  test_vtool.html
_page/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  vtool.html  vtool.tests.html
_page/_modules/: index.html
_page/_modules/utool/: util_class.html
_page/_modules/vtool/: __main__.html  _keypoint_cyth_bench.html  _linalg_cyth_bench.html  _nearest_neighbors_cyth_bench.html  _spatial_verification_cyth_bench.html  _trig_cyth_bench.html  blend.html  chip.html  clustering.html  clustering2.html  confusion.html  coverage_grid.html  depricated.html  distance.html  ellipse.html  exif.html  geometry.html  histogram.html  image.html  image_filters.html  keypoint.html  linalg.html  nearest_neighbors.html  other.html  patch.html  quality_classifier.html  segmentation.html  spatial_verification.html  sver_c_wrapper.html  symbolic.html  test_constrained_matching.html  trig.html
_page/_sources/: index.txt  vtool.tests.txt  vtool.txt
_sources/: index.txt  vtool.tests.txt  vtool.txt
broken/: _dep_matching.py
cppsrc/: sver.cpp
dev/: autogen_docs.sh  build_base_docker.py  build_base_docker2.py  ci_public_gpg_key.pgp.enc  ci_secret_gpg_subkeys.pgp.enc  gpg_owner_trust.enc  install_docker.sh  mingw_build.bat  travis_public_gpg_key.pgp.enc  travis_secret_gpg_key.pgp.enc  unix_build.sh
dev/broken/: _dep_matching.py
dev/unstable/: clustering.py  nn.py
docs/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  vtool.html
docs/_modules/: index.html  numpy.html
docs/_modules/pyflann/: index.html
docs/_modules/utool/: util_class.html
docs/_modules/vtool/: __main__.html  _grave.html  _rhomb_dist.html  blend.html  chip.html  clustering2.html  confusion.html  coverage_grid.html  coverage_kpts.html  demodata.html  depricated.html  distance.html  ellipse.html  exif.html  features.html  fontdemo.html  geometry.html  histogram.html  image.html  image_filters.html  image_shared.html  inspect_matches.html  keypoint.html  linalg.html  matching.html  nearest_neighbors.html  numpy_utils.html  other.html  patch.html  quality_classifier.html  score_normalization.html  segmentation.html  spatial_verification.html  sver_c_wrapper.html  symbolic.html  trig.html  util_math.html
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js
docs/source/: conf.py  index.rst
factory/: build_opencv_docker.py  cleanup.sh  factory_utils.sh  multibuild_config.sh  stage_multibuild.sh
requirements/: build.txt  headless.txt  optional.txt  runtime.txt  tests.txt
scripts/: _install_opencv_build_dependencies_macports_on_macos.sh  _install_opencv_build_dependencies_on_macos.sh  _install_opencv_build_software_on_macos.sh  _install_opencv_software_on_macos.sh  ci_prepare_centos_for_build.sh  ci_prepare_linux_for_build.sh  ci_prepare_macos_for_build.sh
src/cpp/: CMakeLists.txt
src/cpp/sver/: config.h.in
test/: run_tests.py  test_akmeans.py  test_draw_keypoint.py  test_spatial_verification.py  test_sver_wrapper.py  test_vtool.py  time_cythonized_funcs.py
tests/: CMakeLists.txt  grabdata.py  run_tests.py  test_akmeans.py  test_coverage_max_reduce.py  test_draw_keypoint.py  test_import.py  test_pyflann.py  test_spatial_verification.py  test_sver_wrapper.py  test_vtool.py  testdata_nondeterm_sver.py  time_cythonized_funcs.py
vtool/: __init__.py  __main__.py  _grave  _grave.py  _old_matching.py  _pyflann_backend.py  _rhomb_dist.py  blend.py  chip.py  clustering2.py  confusion.py  coverage_grid.py  coverage_kpts.py  demodata.py  depricated.py  distance.py  ellipse.py  exif.py  features.py  fontdemo.py  geometry.py  histogram.py  image.py  image_filters.py  image_shared.py  inspect_matches.py  keypoint.py  linalg.py  matching.py  nearest_neighbors.py  numpy_utils.py  other.py  patch.py  quality_classifier.py  score_normalization.py  segmentation.py  spatial_verification.py  sver_c_wrapper.py  symbolic.py  trig.py  (+1 more)
vtool_ibeis/: __init__.py  __main__.py  _pyflann_backend.py  _rhomb_dist.py  blend.py  chip.py  clustering2.py  confusion.py  coverage_grid.py  coverage_kpts.py  demodata.py  distance.py  ellipse.py  exif.py  features.py  fontdemo.py  geometry.py  histogram.py  image.py  image_filters.py  image_shared.py  inspect_matches.py  keypoint.py  linalg.py  matching.py  nearest_neighbors.py  numpy_utils.py  other.py  patch.py  quality_classifier.py  score_normalization.py  segmentation.py  spatial_verification.py  sver_c_wrapper.py  symbolic.py  trig.py  util_math.py
(+27 files in other folders)
